feat(auth-manager): added latest endpoints to asset,key,connection MAPCO-8095 (#76)
* feat: added latest endpoints to the OpenAPI

* feat(auth-manager): added latest endpoints to asset,key,connection
